--- a/src/main/java/fxml/Materiales/Almacenes/Almacenes.fxml
+++ b/src/main/java/fxml/Materiales/Almacenes/Almacenes.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -10,6 +11,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.control.TitledPane?>
 <?import javafx.scene.control.ToggleGroup?>
+<?import javafx.scene.control.Tooltip?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
@@ -21,16 +23,16 @@
    <children>
       <AnchorPane prefHeight="572.0" prefWidth="250.0">
          <children>
-            <TextField fx:id="peso_producto_buscar" layoutX="118.0" layoutY="67.0" prefHeight="27.0" prefWidth="114.0" />
+            <TextField fx:id="nombre_almacen_buscar" layoutX="118.0" layoutY="67.0" prefHeight="27.0" prefWidth="114.0" />
             <Button layoutX="136.0" layoutY="153.0" mnemonicParsing="false" onAction="#buscarAlmacen" prefHeight="25.0" prefWidth="96.0" text="Buscar" />
             <Line endX="100.0" layoutX="136.0" layoutY="50.0" startX="-100.0" />
-            <TableView fx:id="tabla_almacenes" layoutX="13.0" layoutY="205.0" prefHeight="350.0" prefWidth="224.0">
+            <TableView fx:id="tabla_almacenes" layoutX="13.0" layoutY="205.0" prefHeight="294.0" prefWidth="224.0">
                <columns>
-                  <TableColumn fx:id="columna_nombre" prefWidth="87.0" text="Nombre" />
-                  <TableColumn fx:id="columna_descripcion" prefWidth="136.0" text="Fecha Creacion" />
+                  <TableColumn fx:id="almacen_nombre" prefWidth="137.0" text="Nombre" />
+                  <TableColumn fx:id="almacen_codigo" prefWidth="86.0" text="Codigo" />
                </columns>
             </TableView>
-            <TextField fx:id="codigo_producto_buscar" layoutX="118.0" layoutY="101.0" prefHeight="27.0" prefWidth="114.0" />
+            <TextField fx:id="codigo_almacen_buscar" layoutX="118.0" layoutY="101.0" prefHeight="27.0" prefWidth="114.0" />
             <Label layoutX="17.0" layoutY="70.0" prefHeight="21.0" prefWidth="114.0" text="Nombre">
                <font>
                   <Font size="14.0" />
@@ -54,6 +56,7 @@
                      </image></ImageView>
                </children>
             </Pane>
+            <Button layoutX="151.0" layoutY="514.0" mnemonicParsing="false" prefHeight="27.0" prefWidth="86.0" text="Visualizar" />
          </children>
       </AnchorPane>
       <AnchorPane layoutX="250.0" prefHeight="572.0" prefWidth="750.0">
@@ -72,9 +75,9 @@
                   </ImageView>
                </children>
             </Pane>
-            <TabPane fx:id="almacen_form_pane" layoutY="63.0" prefHeight="509.0" prefWidth="750.0" tabClosingPolicy="UNAVAILABLE">
+            <TabPane fx:id="almacen_form_pane" disable="true" layoutY="63.0" prefHeight="509.0" prefWidth="750.0" tabClosingPolicy="UNAVAILABLE">
               <tabs>
-                <Tab text="General">
+                <Tab fx:id="almacen_form_tab" text="General">
                      <content>
                         <AnchorPane prefHeight="200.0" prefWidth="200.0">
                            <children>
@@ -94,54 +97,112 @@
                                                 <ToggleGroup fx:id="tipoAlmacen" />
                                              </toggleGroup>
                                           </RadioButton>
-                                          <RadioButton fx:id="radio_btn_almacen_fisico" layoutX="249.0" layoutY="92.0" mnemonicParsing="false" text="Almacen Fisico" toggleGroup="$tipoAlmacen" />
+                                          <RadioButton fx:id="radio_btn_almacen_fisico" layoutX="232.0" layoutY="92.0" mnemonicParsing="false" text="Almacen Fisico" toggleGroup="$tipoAlmacen" />
+                                          <Label contentDisplay="RIGHT" layoutX="370.0" layoutY="92.0" text="Lado:">
+                                             <graphic>
+                                                <ImageView fitHeight="10.0" fitWidth="10.0" pickOnBounds="true" preserveRatio="true">
+                                                   <image>
+                                                      <Image url="@../../Imagenes/info_icon.png" />
+                                                   </image>
+                                                   <cursor>
+                                                      <Cursor fx:constant="HAND" />
+                                                   </cursor>
+                                                </ImageView>
+                                             </graphic>
+                                             <tooltip>
+                                                <Tooltip text="Longitud usada para la creacion de la grilla en el siguiente Tab" />
+                                             </tooltip>
+                                          </Label>
+                                          <TextField fx:id="almacen_lado_grilla" layoutX="427.0" layoutY="87.0" prefHeight="27.0" prefWidth="250.0" />
                                        </children>
                                     </AnchorPane>
                                  </content></TitledPane>
-                              <TableView fx:id="rack_table_view" layoutX="14.0" layoutY="225.0" prefHeight="221.0" prefWidth="468.0">
-                                <columns>
-                                  <TableColumn fx:id="rack_column_codigo" prefWidth="126.0" text="Codigo" />
-                                  <TableColumn fx:id="rack_column_largo" prefWidth="101.0" text="Largo" />
-                                    <TableColumn fx:id="rack_column_ancho" prefWidth="122.0" text="Ancho" />
-                                    <TableColumn fx:id="rack_column_altura" prefWidth="118.0" text="Altura" />
-                                </columns>
-                              </TableView>
-                              <TitledPane animated="false" collapsible="false" layoutX="499.0" layoutY="189.0" prefHeight="255.0" prefWidth="218.0" text="Acciones">
-                                 <content>
-                                    <AnchorPane prefHeight="291.0" prefWidth="222.0">
+                              <TitledPane animated="false" collapsible="false" layoutX="14.0" layoutY="189.0" prefHeight="276.0" prefWidth="706.0" text="Elementos Asociados">
+                                <content>
+                                  <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="180.0" prefWidth="200.0">
                                        <children>
-                                          <Button fx:id="desactivar_rack" contentDisplay="TOP" layoutX="64.0" layoutY="21.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="88.0" text="Desactivar">
-                                             <graphic>
-                                                <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
-                                                   <image>
-                                                      <Image url="@../../Imagenes/delete_icon.png" />
-                                                   </image>
-                                                </ImageView>
-                                             </graphic>
-                                          </Button>
-                                          <Button fx:id="buscar_rack_btn" contentDisplay="TOP" layoutX="64.0" layoutY="114.0" mnemonicParsing="false" prefHeight="80.0" prefWidth="88.0" text="Filtrar">
-                                             <graphic>
-                                                <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
-                                                   <image>
-                                                      <Image url="@../../Imagenes/search_icon.png" />
-                                                   </image>
-                                                </ImageView>
-                                             </graphic>
-                                          </Button>
+                                          <TabPane fx:id="list_objects_pane" layoutY="-4.0" prefHeight="257.0" prefWidth="706.0" tabClosingPolicy="UNAVAILABLE">
+                                             <tabs>
+                                                <Tab fx:id="list_racks_tab" disable="true" text="Racks">
+                                                   <content>
+                                                      <AnchorPane>
+                                                         <children>
+                                                            <TableView fx:id="rack_table_view" layoutX="14.0" layoutY="21.0" prefHeight="182.0" prefWidth="455.0">
+                                                               <columns>
+                                                                  <TableColumn fx:id="rack_column_codigo" prefWidth="170.0" text="Codigo" />
+                                                                  <TableColumn fx:id="rack_column_largo" prefWidth="143.0" text="Largo" />
+                                                                  <TableColumn fx:id="rack_column_altura" prefWidth="141.0" text="Altura" />
+                                                               </columns>
+                                                            </TableView>
+                                                            <Button fx:id="desactivar_rack_btn" contentDisplay="TOP" layoutX="543.0" layoutY="21.0" mnemonicParsing="false" prefWidth="85.0" text="Desactivar">
+                                                               <graphic>
+                                                                  <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                                                                     <image>
+                                                                        <Image url="@../../Imagenes/delete_icon.png" />
+                                                                     </image>
+                                                                  </ImageView>
+                                                               </graphic>
+                                                            </Button>
+                                                            <Button fx:id="buscar_rack_btn" contentDisplay="TOP" layoutX="543.0" layoutY="112.0" mnemonicParsing="false" prefWidth="85.0" text="Filtrar">
+                                                               <graphic>
+                                                                  <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                                                                     <image>
+                                                                        <Image url="@../../Imagenes/search_icon.png" />
+                                                                     </image>
+                                                                  </ImageView>
+                                                               </graphic>
+                                                            </Button>
+                                                         </children>
+                                                      </AnchorPane>
+                                                   </content>
+                                                </Tab>
+                                                <Tab fx:id="list_almacenes_tab" disable="true" text="Almacenes">
+                                                   <content>
+                                                      <AnchorPane>
+                                                         <children>
+                                                            <TableView fx:id="almacen_table_view" layoutX="14.0" layoutY="21.0" prefHeight="182.0" prefWidth="455.0">
+                                                               <columns>
+                                                                  <TableColumn fx:id="almacen_column_cod" prefWidth="170.0" text="Codigo" />
+                                                                  <TableColumn fx:id="almacen_column_largo" prefWidth="143.0" text="Largo" />
+                                                                  <TableColumn fx:id="almacen_column_ancho" prefWidth="141.0" text="Ancho" />
+                                                               </columns>
+                                                            </TableView>
+                                                            <Button fx:id="desactivar_almacen_btn" contentDisplay="TOP" layoutX="543.0" layoutY="21.0" mnemonicParsing="false" prefWidth="85.0" text="Desactivar">
+                                                               <graphic>
+                                                                  <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                                                                     <image>
+                                                                        <Image url="@../../Imagenes/delete_icon.png" />
+                                                                     </image>
+                                                                  </ImageView>
+                                                               </graphic>
+                                                            </Button>
+                                                            <Button fx:id="buscar_almacen_btn" contentDisplay="TOP" layoutX="543.0" layoutY="112.0" mnemonicParsing="false" prefWidth="85.0" text="Filtrar">
+                                                               <graphic>
+                                                                  <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                                                                     <image>
+                                                                        <Image url="@../../Imagenes/search_icon.png" />
+                                                                     </image>
+                                                                  </ImageView>
+                                                               </graphic>
+                                                            </Button>
+                                                         </children>
+                                                      </AnchorPane>
+                                                   </content>
+                                                </Tab>
+                                             </tabs>
+                                          </TabPane>
                                        </children>
                                     </AnchorPane>
-                                 </content>
+                                </content>
                               </TitledPane>
-                              <TextField fx:id="rack_cod_input_search" layoutX="79.0" layoutY="189.0" prefHeight="27.0" prefWidth="404.0" />
-                              <Label layoutX="14.0" layoutY="194.0" text="Codigo:" />
                            </children></AnchorPane>
                      </content>
                   </Tab>
-                <Tab text="Distribucion">
+                <Tab fx:id="almacen_draw_tab" text="Distribucion">
                      <content>
                         <AnchorPane>
                            <children>
-                              <TitledPane fx:id="create_racks_container" animated="false" collapsible="false" disable="true" layoutX="439.0" layoutY="24.0" prefHeight="139.0" prefWidth="291.0" text="Creacion de Racks:">
+                              <TitledPane fx:id="create_racks_container" animated="false" collapsible="false" disable="true" layoutX="439.0" layoutY="24.0" prefHeight="139.0" prefWidth="291.0" text="Creacion de Racks">
                                  <content>
                                     <AnchorPane>
                                        <children>
@@ -158,14 +219,12 @@
                                     <AnchorPane fx:id="contenedor_grilla" prefHeight="400.0" prefWidth="400.0" style="-fx-background-color: lightblue;" />
                                  </content>
                               </TitledPane>
-                              <TitledPane fx:id="create_almacen_container" animated="false" collapsible="false" disable="true" layoutX="439.0" layoutY="194.0" prefHeight="139.0" prefWidth="291.0" text="Creacion de Almacen:">
+                              <TitledPane fx:id="create_almacen_container" animated="false" collapsible="false" layoutX="438.0" layoutY="192.0" prefHeight="193.0" prefWidth="291.0" text="Instrucciones">
                                  <content>
                                     <AnchorPane>
                                        <children>
-                                          <Label layoutX="14.0" layoutY="19.0" text="Altura:" />
-                                          <TextField fx:id="rack_altura_field1" layoutX="88.0" layoutY="14.0" prefHeight="27.0" prefWidth="179.0" />
-                                          <Button layoutX="168.0" layoutY="61.0" mnemonicParsing="false" onAction="#crearRack" text="Guardar" />
-                                          <Button layoutX="65.0" layoutY="61.0" mnemonicParsing="false" onAction="#cancelarCreacionRack" text="Cancelar" />
+                                          <Label layoutX="14.0" layoutY="14.0" prefHeight="76.0" prefWidth="250.0" text="Almacen Fisico: Solo se pueden crear Almacenes, para hacerlo solo es necesario que dibuje un cuadrado en la grilla adyacente." textAlignment="JUSTIFY" wrapText="true" />
+                                          <Label layoutX="14.0" layoutY="100.0" prefHeight="87.0" prefWidth="250.0" text="Almacen Logico: Solo se pueden crear Racks, para hacerlo es necesario que dibuje una linea horizontal o vertical en la grilla adyacente y luego llene el valor de la altura en el campo superior." textAlignment="JUSTIFY" wrapText="true" />
                                        </children>
                                     </AnchorPane>
                                  </content>
