--- a/src/main/java/fxml/Materiales/Almacenes/Almacenes.fxml
+++ b/src/main/java/fxml/Materiales/Almacenes/Almacenes.fxml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.Cursor?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.RadioButton?>
@@ -104,9 +103,6 @@
                                                    <image>
                                                       <Image url="@../../Imagenes/info_icon.png" />
                                                    </image>
-                                                   <cursor>
-                                                      <Cursor fx:constant="HAND" />
-                                                   </cursor>
                                                 </ImageView>
                                              </graphic>
                                              <tooltip>
@@ -167,7 +163,7 @@
                                                                   <TableColumn fx:id="almacen_column_ancho" prefWidth="141.0" text="Ancho" />
                                                                </columns>
                                                             </TableView>
-                                                            <Button fx:id="desactivar_almacen_btn" contentDisplay="TOP" layoutX="543.0" layoutY="21.0" mnemonicParsing="false" prefWidth="85.0" text="Desactivar">
+                                                            <Button fx:id="desactivar_almacen_btn" contentDisplay="TOP" disable="true" layoutX="543.0" layoutY="21.0" mnemonicParsing="false" prefWidth="85.0" text="Desactivar">
                                                                <graphic>
                                                                   <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                                                                      <image>
@@ -176,7 +172,7 @@
                                                                   </ImageView>
                                                                </graphic>
                                                             </Button>
-                                                            <Button fx:id="buscar_almacen_btn" contentDisplay="TOP" layoutX="543.0" layoutY="112.0" mnemonicParsing="false" prefWidth="85.0" text="Filtrar">
+                                                            <Button fx:id="buscar_almacen_btn" contentDisplay="TOP" disable="true" layoutX="543.0" layoutY="112.0" mnemonicParsing="false" prefWidth="85.0" text="Filtrar">
                                                                <graphic>
                                                                   <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
                                                                      <image>
@@ -214,17 +210,19 @@
                                     </AnchorPane>
                                  </content>
                               </TitledPane>
-                              <TitledPane animated="false" collapsible="false" layoutX="14.0" layoutY="24.0" text="Distribucion de Racks:">
+                              <TitledPane fx:id="contenedor_grilla" animated="false" collapsible="false" layoutX="14.0" layoutY="24.0" text="Grilla:">
                                  <content>
-                                    <AnchorPane fx:id="contenedor_grilla" prefHeight="400.0" prefWidth="400.0" style="-fx-background-color: lightblue;" />
+                                    <AnchorPane fx:id="pane_grilla" prefHeight="400.0" prefWidth="400.0" style="-fx-background-color: lightblue;" />
                                  </content>
                               </TitledPane>
-                              <TitledPane fx:id="create_almacen_container" animated="false" collapsible="false" layoutX="438.0" layoutY="192.0" prefHeight="193.0" prefWidth="291.0" text="Instrucciones">
+                              <TitledPane fx:id="create_almacen_logico_container" animated="false" collapsible="false" disable="true" layoutX="439.0" layoutY="175.0" prefHeight="139.0" prefWidth="291.0" text="Creacion de Almacenes">
                                  <content>
                                     <AnchorPane>
                                        <children>
-                                          <Label layoutX="14.0" layoutY="14.0" prefHeight="76.0" prefWidth="250.0" text="Almacen Fisico: Solo se pueden crear Almacenes, para hacerlo solo es necesario que dibuje un cuadrado en la grilla adyacente." textAlignment="JUSTIFY" wrapText="true" />
-                                          <Label layoutX="14.0" layoutY="100.0" prefHeight="87.0" prefWidth="250.0" text="Almacen Logico: Solo se pueden crear Racks, para hacerlo es necesario que dibuje una linea horizontal o vertical en la grilla adyacente y luego llene el valor de la altura en el campo superior." textAlignment="JUSTIFY" wrapText="true" />
+                                          <Label layoutX="14.0" layoutY="19.0" text="Nombre:" />
+                                          <TextField fx:id="almacen_logico_nombre_field" layoutX="88.0" layoutY="14.0" prefHeight="27.0" prefWidth="179.0" />
+                                          <Button layoutX="168.0" layoutY="61.0" mnemonicParsing="false" onAction="#crearAlmacenLogico" text="Guardar" />
+                                          <Button layoutX="65.0" layoutY="61.0" mnemonicParsing="false" onAction="#cancelarCreacionAlmacen" text="Cancelar" />
                                        </children>
                                     </AnchorPane>
                                  </content>
