--- a/src/main/java/fxml/Facturacion/Envios/Envios.fxml
+++ b/src/main/java/fxml/Facturacion/Envios/Envios.fxml
@@ -89,7 +89,7 @@
                            </font>
                         </Label>
                         <TextField fx:id="VerProducto" layoutX="267.0" layoutY="5.0" prefHeight="25.0" prefWidth="240.0" />
-                        <Button fx:id="buscarProducto" layoutX="516.0" layoutY="6.0" mnemonicParsing="false" prefHeight="20.0" prefWidth="20.0" text="+">
+                        <Button fx:id="buscarProducto" layoutX="516.0" layoutY="6.0" mnemonicParsing="false" onAction="#handleAgregarProducto" prefHeight="20.0" prefWidth="20.0" text="+">
                            <font>
                               <Font size="10.0" />
                            </font>
@@ -129,26 +129,26 @@
                <content>
                   <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="171.0" prefWidth="712.0">
                      <children>
-                        <AnchorPane fx:id="pedidoForm" prefHeight="128.0" prefWidth="727.0">
+                        <AnchorPane fx:id="pedidoForm" prefHeight="99.0" prefWidth="727.0">
                            <children>
                               <Label layoutX="14.0" layoutY="14.0" text="Cliente:">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
                               </Label>
-                              <TextField fx:id="VerCliente" layoutX="156.0" layoutY="12.0" prefHeight="25.0" prefWidth="427.0" />
+                              <TextField fx:id="nombre_cliente" layoutX="156.0" layoutY="12.0" prefHeight="25.0" prefWidth="427.0" />
                               <Label fx:id="VerDocumentoLabel" layoutX="14.0" layoutY="50.0" text="DNI:">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
                               </Label>
-                              <TextField fx:id="VerDocumento1" layoutX="156.0" layoutY="48.0" prefHeight="25.0" prefWidth="134.0" />
-                              <Label fx:id="VerDocumentoLabel1" layoutX="342.0" layoutY="51.0" text="DNI:">
+                              <TextField fx:id="dni_cliente" layoutX="156.0" layoutY="48.0" prefHeight="25.0" prefWidth="134.0" />
+                              <Label fx:id="VerDocumentoLabel1" layoutX="342.0" layoutY="51.0" text="RUC">
                                  <font>
                                     <Font size="14.0" />
                                  </font>
                               </Label>
-                              <TextField fx:id="VerDocumento11" layoutX="449.0" layoutY="49.0" prefHeight="25.0" prefWidth="134.0" />
+                              <TextField fx:id="ruc_cliente" layoutX="449.0" layoutY="49.0" prefHeight="25.0" prefWidth="134.0" />
                            </children>
                         </AnchorPane>
                      </children>
