--- a/src/main/java/fxml/Ventas/Clientes/ClientesBotones.fxml
+++ b/src/main/java/fxml/Ventas/Clientes/ClientesBotones.fxml
@@ -1,15 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import java.util.*?>
-<?import javafx.scene.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
+<?import javafx.scene.control.Button?>
+<?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane id="AnchorPane" prefHeight="100.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.BotonesAccionesController">
+<AnchorPane id="AnchorPane" prefHeight="100.0" prefWidth="300.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pe.pucp.team_1.dp1.sigapucp.Controllers.BotonesAccionesController">
    <children>
-      <Button layoutX="37.0" layoutY="37.0" mnemonicParsing="false" onAction="#onAccion" text="Nuevo" />
-      <Button layoutX="179.0" layoutY="37.0" mnemonicParsing="false" text="Desactivar" />
-      <Button layoutX="104.0" layoutY="37.0" mnemonicParsing="false" onAction="#onAccion" text="Guardar" />
+      <Button layoutX="9.0" layoutY="37.0" mnemonicParsing="false" onAction="#onAccion" text="Nuevo" />
+      <Button layoutX="152.0" layoutY="37.0" mnemonicParsing="false" onAction="#onAccion" text="Desactivar" />
+      <Button layoutX="75.0" layoutY="37.0" mnemonicParsing="false" onAction="#onAccion" text="Guardar" />
+      <Button layoutX="238.0" layoutY="37.0" mnemonicParsing="false" onAction="#onAccion" text="Cargar" />
    </children>
 </AnchorPane>
