--- a/src/main/java/fxml/Materiales/Racks/AgregarProductosARack.fxml
+++ b/src/main/java/fxml/Materiales/Racks/AgregarProductosARack.fxml
@@ -11,26 +11,25 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-
-<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="550.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/9.0.1">
+<AnchorPane id="AnchorPane" prefHeight="400.0" prefWidth="550.0" xmlns="http://javafx.com/javafx/9" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <TableView layoutX="24.0" layoutY="167.0" prefHeight="99.0" prefWidth="496.0">
+      <TableView fx:id="tabla_productos" layoutX="24.0" layoutY="167.0" prefHeight="99.0" prefWidth="496.0">
          <columns>
-            <TableColumn prefWidth="57.0" text="Código" />
-            <TableColumn prefWidth="98.0" text="Nombre" />
-            <TableColumn prefWidth="133.0" text="Fecha de adquisición" />
-            <TableColumn prefWidth="128.0" text="Fecha de vencimiento" />
-            <TableColumn prefWidth="85.0" text="Cantidad" />
+            <TableColumn fx:id="tabla_producto_cod" prefWidth="57.0" text="Código" />
+            <TableColumn fx:id="tabla_producto_nomb" prefWidth="98.0" text="Nombre" />
+            <TableColumn fx:id="tabla_producto_fecha_adquisicion" prefWidth="133.0" text="Fecha de adquisición" />
+            <TableColumn fx:id="tabla_producto_fecha_vencimiento" prefWidth="128.0" text="Fecha de vencimiento" />
+            <TableColumn fx:id="tabla_producto_cantidad" prefWidth="85.0" text="Cantidad" />
          </columns>
       </TableView>
-      <AnchorPane layoutX="24.0" layoutY="12.0" prefHeight="99.0" prefWidth="502.0">
+      <AnchorPane layoutX="24.0" layoutY="12.0" prefHeight="112.0" prefWidth="496.0">
          <children>
             <Label layoutX="14.0" layoutY="42.0" text="Código:">
                <font>
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label layoutX="14.0" layoutY="69.0" text="Nombre:">
+            <Label layoutX="14.0" layoutY="73.0" text="Nombre:">
                <font>
                   <Font size="14.0" />
                </font>
@@ -40,7 +39,7 @@
                   <Font size="14.0" />
                </font>
             </Label>
-            <Label layoutX="222.0" layoutY="69.0" text="Fecha de adquisición:">
+            <Label layoutX="222.0" layoutY="73.0" text="Fecha de adquisición:">
                <font>
                   <Font size="14.0" />
                </font>
@@ -50,14 +49,14 @@
                   <Font size="20.0" />
                </font>
             </Label>
-            <TextField layoutX="100.0" layoutY="40.0" prefHeight="20.0" prefWidth="111.0" />
-            <TextField layoutX="100.0" layoutY="67.0" prefHeight="20.0" prefWidth="111.0" />
-            <ComboBox layoutX="370.0" layoutY="40.0" prefHeight="25.0" prefWidth="126.0" />
-            <DatePicker layoutX="369.0" layoutY="67.0" prefHeight="25.0" prefWidth="126.0" />
+            <TextField fx:id="producto_cod" layoutX="100.0" layoutY="40.0" prefHeight="20.0" prefWidth="111.0" />
+            <TextField fx:id="producto_nomb" layoutX="100.0" layoutY="71.0" prefHeight="20.0" prefWidth="111.0" />
+            <ComboBox fx:id="producto_tipo" layoutX="370.0" layoutY="40.0" prefHeight="25.0" prefWidth="126.0" />
+            <DatePicker fx:id="producto_fecha" layoutX="369.0" layoutY="71.0" prefHeight="25.0" prefWidth="126.0" />
             <Line endX="400.0" layoutX="100.0" layoutY="29.0" startX="-100.0" />
          </children>
       </AnchorPane>
-      <Button layoutX="460.0" layoutY="125.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Buscar" />
+      <Button layoutX="423.0" layoutY="129.0" mnemonicParsing="false" onAction="#buscarProducto" prefHeight="27.0" prefWidth="97.0" text="Buscar" />
       <Label layoutX="37.0" layoutY="299.0" text="Cantidad">
          <font>
             <Font size="14.0" />
@@ -68,8 +67,9 @@
             <Font size="14.0" />
          </font>
       </Label>
-      <TextField layoutX="138.0" layoutY="295.0" prefHeight="20.0" prefWidth="111.0" />
-      <ComboBox layoutX="393.0" layoutY="295.0" prefHeight="25.0" prefWidth="126.0" />
-      <Button layoutX="459.0" layoutY="342.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="60.0" text="Ingresar" />
+      <TextField fx:id="producto_cantidad_agregar" layoutX="138.0" layoutY="295.0" prefHeight="20.0" prefWidth="111.0" />
+      <ComboBox fx:id="producto_tipo_ingreso" layoutX="393.0" layoutY="295.0" prefHeight="25.0" prefWidth="126.0" />
+      <Button layoutX="422.0" layoutY="342.0" mnemonicParsing="false" onAction="#agregarProducto" prefHeight="27.0" prefWidth="97.0" text="Agregar" />
+      <Button layoutX="311.0" layoutY="342.0" mnemonicParsing="false" onAction="#cerrarModal" prefHeight="27.0" prefWidth="97.0" text="Cancelar" />
    </children>
 </AnchorPane>
