--- a/src/main/java/fxml/Materiales/Racks/Racks.fxml
+++ b/src/main/java/fxml/Materiales/Racks/Racks.fxml
@@ -58,17 +58,30 @@
                   <TableView fx:id="rack_form_producto_tabla" layoutX="49.0" layoutY="229.0" prefHeight="273.0" prefWidth="472.0">
                     <columns>
                       <TableColumn fx:id="rack_form_producto_cod_column" prefWidth="117.0" text="Código" />
-                        <TableColumn fx:id="rack_form_cant_prod_column" prefWidth="110.0" text="Existencias" />
+                        <TableColumn fx:id="rack_form_producto_nombre_column" prefWidth="138.0" text="Nombre" />
+                        <TableColumn fx:id="rack_form_cant_prod_column" prefWidth="99.0" text="Existencias" />
                     </columns>
                   </TableView>
                   <TitledPane animated="false" collapsible="false" layoutX="530.0" layoutY="229.0" prefHeight="273.0" prefWidth="177.0" text="Acciones">
                      <content>
                         <AnchorPane prefHeight="235.0" prefWidth="175.0">
                            <children>
-                              <Button layoutX="68.0" layoutY="41.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="E" AnchorPane.topAnchor="41.0" />
-                              <Button layoutX="68.0" layoutY="122.0" mnemonicParsing="false" prefHeight="40.0" prefWidth="40.0" text="X" />
-                              <Label layoutX="72.0" layoutY="93.0" text="Ingresar" />
-                              <Label layoutX="66.0" layoutY="164.0" text="Movimiento" />
+                              <Button contentDisplay="TOP" layoutX="43.0" layoutY="27.0" mnemonicParsing="false" prefHeight="71.0" prefWidth="90.0" text="Ingresar" AnchorPane.topAnchor="27.0">
+                                 <graphic>
+                                    <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../Imagenes/plus_icon.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic></Button>
+                              <Button contentDisplay="TOP" layoutX="43.0" layoutY="129.0" mnemonicParsing="false" prefHeight="71.0" prefWidth="90.0" text="Movimiento">
+                                 <graphic>
+                                    <ImageView fitHeight="40.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true">
+                                       <image>
+                                          <Image url="@../../Imagenes/move_product_icon.png" />
+                                       </image>
+                                    </ImageView>
+                                 </graphic></Button>
                            </children>
                         </AnchorPane>
                      </content>
